--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "prop-types": "^15.8.1",
+    "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
